В гилп файл добавлена "слежка" за изменениями в Файле .pug

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -5,5 +5,5 @@ html
         title My First web app
         link(rel='stylesheet' href='css/main.css')
     body
-        p Hello мир!
-        p Это pug
+        p He he ; )
+        p Vrey cool thing!
