Пустая html страница. Все готово для старта!

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -5,5 +5,4 @@ html
         title My First web app
         link(rel='stylesheet' href='css/main.css')
     body
-        p He he ; )
-        p Vrey cool thing!
+        p nothing yet
