грубая верстка шапки сайта с использованием методологии БЭМ. Нужно доработать шапку

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,7 +1,111 @@
 body {
   margin: 0;
 }
-p {
-  color: #f00;
-  border: 1px solid #ffd700;
+.header {
+  min-height: 348px;
+  background-color: #36383b;
+}
+/*Блок для фона шапки сайта */
+.bg {
+  min-height: 348px;
+  width: 1254px;
+  background-color: #d6d6d6;
+}
+/*Блок для контента*/
+.content {
+  width: 800px;
+  min-height: 50px;
+}
+.content_theme-grey {
+  background-color: #808080;
+  opacity: 0.5;
+}
+/*примесь для фона шапки*/
+.header__bg {
+  position: absolute;
+}
+/*примесь для контента шапки сайта*/
+.header__content {
+  width: 1172px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  top: 29px;
+}
+/*примесь для меню в контенте шапки*/
+.content__menu {
+  position: absolute;
+  top: 25px;
+  right: 0;
+}
+/*примесь для названия страницы*/
+.content__caption {
+  margin-top: 84px;
+}
+/*====================Блок лого=================*/
+.logo {
+  width: 83px;
+  height: 83px;
+  background: url("../img/layer-logo.png") no-repeat;
+}
+.logo__text {
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 28px;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.logo__text_middle-right-place {
+  display: block;
+  position: relative;
+  top: 26px;
+  left: 28px;
+}
+/*====================Блок меню==================*/
+.menu__items {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.menu__items::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.menu__item {
+  float: left;
+  margin-right: 40px;
+}
+.menu__item_facebook-theme {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 36.12px;
+}
+.menu__item_twitter-theme {
+  color: #fff;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 36.12px;
+}
+.menu__item:last-child {
+  margin-right: 0;
+}
+/*====================Блок с названием страницы=========*/
+.caption {
+  width: 293px;
+  height: 71px;
+  background-color: #fff;
+}
+.caption__text {
+  display: block;
+  position: relative;
+  top: 20px;
+  left: 28px;
+  color: #363636;
+  font-family: Montserrat;
+  font-size: 28px;
+  font-weight: 400;
+  text-transform: uppercase;
 }
