--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -105,3 +105,29 @@ body
     font-size 28px
     font-weight 400
     text-transform uppercase
+
+/*Тело сайта*/
+.main
+  background-color red
+  opacity 0.3
+  min-height 300px
+
+
+/*Примесь для контента тела сайта*/
+.main__content
+  width 1172px
+  margin-left auto
+  margin-right auto
+
+
+/*Футер сайта*/
+.footer
+  background-color blue
+  opacity 0.3
+  min-height 100px
+
+/*Примесь для подвала сайта*/
+.footer__content
+  width 1172px
+  margin-left auto
+  margin-right auto
