--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -29,3 +29,12 @@ html
                 // Название страницы
                 div.caption.content__caption
                     span.caption__text our services
+        //Тело сайта
+        main.main
+            // Контент для тела сайта
+            div.content.main__content.content_theme-grey
+
+        //Футер сайта
+        footer.footer
+            // Контент для футера сайта
+            div.content.footer__content.content_theme-grey
