--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -9,26 +9,30 @@ html
         // Шапка сайта
         header.header
             // Фон для шапки сайта
-            div.bg.header__bg
+            div.header__bg.header__bg-inner.header__bg_theme-gray
             // Контент для шапки
-            div.content.header__content
-                // Блок для Лого
-                div.logo
-                    a.logo__text.logo__text_middle-right-place(href="#") fdn
-                //Блок для меню
-                div.menu.content__menu
-                    ul.menu__items
-                        li.menu__item.menu__item_facebook-theme
-                            i(class="fa fa-facebook", aria-hidden="true")
-                        li.menu__item.menu__item_twitter-theme
-                            i(class="fa fa-twitter", aria-hidden="true")
-                        li.menu__item
-                            img(src="../img/forma-1.png", alt="корзина")
-                        li.menu__item
-                            img(src="../img/menu.png", alt="меню")
-                // Название страницы
-                div.caption.content__caption
-                    span.caption__text our services
+            div.header__content.header__content-inner
+                //Фон в контенте шапки
+                div.header__content-bg.header__content-bg-inner.header__content-bg_theme-gray
+                //Контейнер в контенте шапки для содержимого типа лого, меню и т.д
+                div.header__container.header__content-container-inner
+                    // Блок для Лого
+                    div.logo
+                        a.logo__text.logo__text_middle-right-place(href="#") fdn
+                    //Блок для меню
+                    div.menu.content__menu
+                        ul.menu__items
+                            li.menu__item.menu__item_facebook-theme
+                                i(class="fa fa-facebook", aria-hidden="true")
+                            li.menu__item.menu__item_twitter-theme
+                                i(class="fa fa-twitter", aria-hidden="true")
+                            li.menu__item
+                                img(src="../img/forma-1.png", alt="корзина")
+                            li.menu__item
+                                img(src="../img/menu.png", alt="меню")
+                    // Название страницы
+                    div.caption.content__caption
+                        span.caption__text our services
         //Тело сайта
         main.main
             // Контент для тела сайта
