грубая верстка макета сайта с использованием методологии БЭМ. Основа для главного содержимого сайта

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -34,9 +34,9 @@ html
                     div.caption.content__caption
                         span.caption__text our services
         //Тело сайта
-        main.main
+        div.main.main_theme-white-gr
             // Контент для тела сайта
-            div.content.main__content.content_theme-grey
+            div.main__content.main__content-inner.main__content_theme-grey
 
         //Футер сайта
         footer.footer
