--- a/app/css/main.css
+++ b/app/css/main.css
@@ -136,13 +136,19 @@ body {
 }
 /*Тело сайта*/
 .main {
-  background-color: #f00;
-  opacity: 0.3;
-  min-height: 300px;
+  min-height: 500px;
 }
-/*Примесь для контента тела сайта*/
+.main_theme-white-gr {
+  background-color: #f5f5f5;
+}
 .main__content {
   width: 1172px;
+  min-height: 450px;
+}
+.main__content_theme-grey {
+  background-color: #d6d6d6;
+}
+.main__content-inner {
   margin-left: auto;
   margin-right: auto;
 }
