--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -134,16 +134,21 @@ body
 
 /*Тело сайта*/
 .main
-  background-color red
-  opacity 0.3
-  min-height 300px
+  min-height 500px
+  &_theme-white-gr
+    background-color #f5f5f5
+  //Элемент для размещения контента
+  &__content
+    width 1172px
+    min-height 450px
+    &_theme-grey
+      background-color #d6d6d6
+  // Нахождение контента внутри
+  &__content-inner
+    margin-left auto
+    margin-right auto
 
 
-/*Примесь для контента тела сайта*/
-.main__content
-  width 1172px
-  margin-left auto
-  margin-right auto
 
 
 /*Футер сайта*/
