--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -37,6 +37,10 @@ html
         div.main.main_theme-white-gr
             // Контент для тела сайта
             div.main__content.main__content-inner.main__content_theme-grey
+                //Колонка для всего остального
+                aside.main__column-aside.main__column-inner-right
+                //Колонка для главного содержимого сайта
+                main.main__column-main.main__column-inner-left
 
         //Футер сайта
         footer.footer
