--- a/app/css/main.css
+++ b/app/css/main.css
@@ -152,6 +152,25 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+.main__content-inner::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.main__column-main {
+  width: 879px;
+  min-height: 400px;
+}
+.main__column-aside {
+  width: 293px;
+  min-height: 400px;
+}
+.main__column-inner-left {
+  margin-right: 293px;
+}
+.main__column-inner-right {
+  float: right;
+}
 /*Футер сайта*/
 .footer {
   background-color: #00f;
