--- a/app/css/main.css
+++ b/app/css/main.css
@@ -171,15 +171,128 @@ body {
 .main__column-inner-right {
   float: right;
 }
+.main__double-unit {
+  display: inline-block;
+  vertical-align: top;
+}
+/*!!!!!=============Информационный блок=======================!!!!!*/
+.unit {
+  width: 233px;
+  height: 233px;
+  padding: 30px 30px;
+}
+.unit_theme-info {
+  background-color: #fff;
+}
+.unit_theme-foto {
+  background-color: #d6d6d6;
+}
+.unit_theme-blue {
+  background-color: #2998d6;
+}
+.unit_theme-yello {
+  background-color: #ffe12a;
+}
+.unit_theme-pdf-icon-yellow {
+  background: #ffe400 url("../img/icon-pdf.png") no-repeat 120px 102px;
+}
+.unit_theme-star-icon-yellow {
+  background: #ffe400 url("../img/icon-star.png") no-repeat 108px 101px;
+}
+.unit__title {
+  width: 155px;
+  margin-top: 0;
+}
+.unit__title_theme-head {
+  color: #363636;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-weight: 700;
+}
+.unit__title_theme-head-aside {
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 28px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.18px;
+}
+.unit__title_theme-head-aside-small {
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-weight: 400;
+}
+.unit__mark_theme-blue-white {
+  color: #8bcffb;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 400;
+}
+.unit__article_theme-text {
+  color: #989898;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+}
+.unit__horizontal {
+  width: 40px;
+  margin-left: 0;
+  border-width: 3px;
+}
+.unit__horizontal_black-solid {
+  border: solid #363636;
+}
+.unit__horizontal_white-solid {
+  border: solid #fff;
+}
+.unit__number {
+  width: 71px;
+  height: 71px;
+}
+.unit__number_theme-yellow {
+  background-color: #ffe400;
+  color: #363636;
+  font-family: Montserrat;
+  font-size: 28px;
+  font-weight: 400;
+  text-align: center;
+}
+.unit__number_middle {
+  display: inline-block;
+}
+.unit__icon-caption {
+  display: block;
+  position: relative;
+  top: 160px;
+  text-align: center;
+}
+.unit__icon-caption_uppercase-text-black {
+  color: #363636;
+  font-family: Montserrat;
+  font-size: 12px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.08px;
+}
 /*Футер сайта*/
 .footer {
-  background-color: #00f;
   opacity: 0.3;
   min-height: 100px;
 }
-/*Примесь для подвала сайта*/
 .footer__content {
   width: 1172px;
+  min-height: 100px;
+}
+.footer__content_theme-grey {
+  background-color: #d6d6d6;
+}
+.footer__inner {
   margin-left: auto;
   margin-right: auto;
+}
+.footer__container {
+  position: relative;
+  background-color: #008000;
 }
