Размещение частей страницы по отдельным папкам.

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -102,6 +102,9 @@ body {
   float: left;
   margin-right: 40px;
 }
+.menu__item_text {
+  text-decoration: none;
+}
 .menu__item_facebook-theme {
   color: #fff;
   font-size: 20px;
@@ -292,7 +295,6 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
-.footer__container {
-  position: relative;
-  background-color: #008000;
+.footer__container__menu-inner {
+  float: right;
 }
