--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -101,6 +101,10 @@ body
   &__item
     float left
     margin-right 40px
+
+    &_text
+      text-decoration none
+
     &_facebook-theme
       color #ffffff
       font-size 20px
@@ -301,8 +305,8 @@ body
 
   //Элемент для размещения содержимого типа копирайт, меню и т.д.
   &__container
-    position relative
-    background-color green
+    &__menu-inner
+      float right
 
 
 
