--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -7,121 +7,8 @@ html
         link(rel='stylesheet' href='css/main.css')
     body
         // Шапка сайта
-        header.header
-            // Фон для шапки сайта
-            div.header__bg.header__bg-inner.header__bg_theme-gray
-            // Контент для шапки
-            div.header__content.header__content-inner
-                //Фон в контенте шапки
-                div.header__content-bg.header__content-bg-inner.header__content-bg_theme-gray
-                //Контейнер в контенте шапки для содержимого типа лого, меню и т.д
-                div.header__container.header__content-container-inner
-                    // Блок для Лого
-                    div.logo
-                        a.logo__text.logo__text_middle-right-place(href="#") fdn
-                    //Блок для меню
-                    div.menu.content__menu
-                        ul.menu__items
-                            li.menu__item.menu__item_facebook-theme
-                                i(class="fa fa-facebook", aria-hidden="true")
-                            li.menu__item.menu__item_twitter-theme
-                                i(class="fa fa-twitter", aria-hidden="true")
-                            li.menu__item
-                                img(src="../img/forma-1.png", alt="корзина")
-                            li.menu__item
-                                img(src="../img/menu.png", alt="меню")
-                    // Название страницы
-                    div.caption.content__caption
-                        span.caption__text our services
+        include header/header.pug
         //Тело сайта
-        div.main.main_theme-white-gr
-            // Контент для тела сайта
-            div.main__content.main__content-inner.main__content_theme-grey
-                //Колонка для всего остального
-                aside.main__column-aside.main__column-inner-right
-                    div.unit.unit_theme-blue
-                        h2.unit__title.unit__title_theme-head-aside popular posts
-                        p.unit__mark.unit__mark_theme-blue-white 12 february, 2015
-                        h3.unit__title.unit__title_theme-head-aside-small Project Design and Engineering Services
-                        p.unit__mark.unit__mark_theme-blue-white 23 comments
-                        hr.unit__horizontal.unit__horizontal_white-solid
-                    div.unit.unit_theme-pdf-icon-yellow
-                        span.unit__icon-caption.unit__icon-caption_uppercase-text-black download price
-                    div.unit.unit_theme-blue
-                        h2.unit__title.unit__title_theme-head-aside subscribe
-                        hr.unit__horizontal.unit__horizontal_white-solid
-                    div.unit.unit_theme-star-icon-yellow
-                        span.unit__icon-caption.unit__icon-caption_uppercase-text-black Work with us
-                //Колонка для главного содержимого сайта
-                main.main__column-main.main__column-inner-left
-                    div.main__double-unit
-                        div.unit.unit_theme-info
-                            h3.unit__title.unit__title_theme-head General Contracting
-                            hr.unit__horizontal.unit__horizontal_black-solid
-                            p.unit__article.unit__article_theme-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
-                        div.unit.unit_theme-foto
-                            div.unit__number.unit__number_theme-yellow
-                                span.unit__number.unit__number_middle 1
-
-                    div.main__double-unit
-                        div.unit.unit_theme-foto
-                            div.unit__number.unit__number_theme-yellow
-                                span.unit__number.unit__number_middle 2
-                        div.unit.unit_theme-info
-                            h3.unit__title.unit__title_theme-head Project design and engineering
-                            hr.unit__horizontal.unit__horizontal_black-solid
-                            p.unit__article.unit__article_theme-text Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.
-
-                    div.main__double-unit
-                        div.unit.unit_theme-info
-                            h3.unit__title.unit__title_theme-head Capital Improvements
-                            hr.unit__horizontal.unit__horizontal_black-solid
-                            p.unit__article.unit__article_theme-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
-                        div.unit.unit_theme-foto
-                            div.unit__number.unit__number_theme-yellow
-                                span.unit__number.unit__number_middle 3
-
-                    div.main__double-unit
-                        div.unit.unit_theme-foto
-                            div.unit__number.unit__number_theme-yellow
-                                span.unit__number.unit__number_middle 4
-                        div.unit.unit_theme-info
-                            h3.unit__title.unit__title_theme-head Construction
-                            hr.unit__horizontal.unit__horizontal_black-solid
-                            p.unit__article.unit__article_theme-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
-
-                    div.main__double-unit
-                        div.unit.unit_theme-info
-                            h3.unit__title.unit__title_theme-head Expert Witness
-                            hr.unit__horizontal.unit__horizontal_black-solid
-                            p.unit__article.unit__article_theme-text Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.
-                        div.unit.unit_theme-foto
-                            div.unit__number.unit__number_theme-yellow
-                                span.unit__number.unit__number_middle 5
-
-                    div.main__double-unit
-                        div.unit.unit_theme-foto
-                            div.unit__number.unit__number_theme-yellow
-                                span.unit__number.unit__number_middle 6
-                        div.unit.unit_theme-info
-                            h3.unit__title.unit__title_theme-head Procurement
-                            hr.unit__horizontal.unit__horizontal_black-solid
-                            p.unit__article.unit__article_theme-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
-
-
-        //Футер сайта
-        footer.footer
-            // Контент для футера сайта
-            div.footer__content.footer__inner.footer__content_theme-grey
-                div.footer__container
-                    span 2015 © Copyright - Foundation theme by Stylemixthemes
-                    //Блок для меню
-                    div.menu.content__menu
-                        ul.menu__items
-                            li.menu__item Services
-                            li.menu__item OurWorks
-                            li.menu__item News & events
-                            li.menu__item Worck with us
-                            li.menu__item F.A.Q
-                            li.menu__item Contact us
-                            li.menu__item Shop
+        include body/our-services/our-services.pug
+        //Футтер
+        include footer/footer.pug
