--- a/app/views/header/header.pug
+++ b/app/views/header/header.pug
@@ -17,9 +17,12 @@ header.header
                         i(class="fa fa-facebook", aria-hidden="true")
                     li.menu__item.menu__item_twitter-theme
                         i(class="fa fa-twitter", aria-hidden="true")
-                    li.menu__item
-                        img(src="../img/forma-1.png", alt="корзина")
-                    li.menu__item
+                    li.menu__item.menu__item_icon-theme
+                        div.menu__item-layer
+                            img(src="../img/forma-1.png", alt="корзина")
+                            div.menu__icon-super.menu__icon-super_theme-sq-yellow
+                                span.menu__icon-super_theme-text 99
+                    li.menu__item.menu__item_icon-theme
                         img(src="../img/menu.png", alt="меню")
             // Название страницы
             div.caption.content__caption
