--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -117,8 +117,31 @@ body
       font-weight 400
       line-height 36.12px
 
+    &_icon-theme
+      padding-top 5px
+
     &:last-child
       margin-right 0
+
+  &__item-layer
+    position relative
+
+  &__icon-super
+    position absolute
+    top -10px
+    right -15px
+
+    &_theme-text
+      color #363636
+      font-family Montserrat
+      font-size 12px
+      font-weight 400
+
+    &_theme-sq-yellow
+      width 21px
+      height 16px
+      text-align center
+      background-color #ffe400
 
 /*====================Блок с названием страницы=========*/
 .caption
@@ -289,15 +312,32 @@ body
 
 /*Футер сайта*/
 .footer
-  opacity 0.3
-  min-height 100px
+  min-height 80px
+
+  &_theme-white-grey
+    background-color #f5f5f5
+
+  &_theme-text
+    color #9b9b9b
+    font-family Montserrat
+    font-size 12px
+    font-weight 400
+
+  &_theme-text-mark
+    color: #2297d8
+
+  &_theme-text-menu
+    color #a2a2a2
+    font-family Montserrat
+    font-size 12px
+    font-weight 400
   //Элемент для контента футера
   &__content
     width 1172px
-    min-height 100px
+    min-height 80px
     //Фон для контента футера
     &_theme-grey
-      background-color #d6d6d6
+      background-color #f5f5f5
   //Размещение контента в футере
   &__inner
     margin-left auto
@@ -305,8 +345,20 @@ body
 
   //Элемент для размещения содержимого типа копирайт, меню и т.д.
   &__container
+    &__container-inner
+      position relative
+      top 29px
+
+    &__text-inner
+      display inline-block
+
     &__menu-inner
       float right
+
+    &::after
+      content ""
+      display table
+      clear both
 
 
 
