--- a/app/views/body/our-services/our-services.pug
+++ b/app/views/body/our-services/our-services.pug
@@ -14,6 +14,10 @@ div.main.main_theme-white-gr
             div.unit.unit_theme-blue
                 h2.unit__title.unit__title_theme-head-aside subscribe
                 hr.unit__horizontal.unit__horizontal_white-solid
+                div.unit__inner-form-aside
+                    form.form
+                        input.form__input.form__input_theme-aside-input.form__input_theme-text.form__input_theme-blue-text(type="text", name="email", value="E-mail")
+                        input.form__submit.form__submit_theme-aside-submit.form__submit_theme-text.form__submit_theme-white-text(type="submit", value="sign up")
             div.unit.unit_theme-star-icon-yellow
                 span.unit__icon-caption.unit__icon-caption_uppercase-text-black Work with us
         //Колонка для главного содержимого сайта
