--- a/app/views/body/our-services/our-services.pug
+++ b/app/views/body/our-services/our-services.pug
@@ -21,7 +21,7 @@ div.main.main_theme-white-gr
             div.unit.unit_theme-star-icon-yellow
                 span.unit__icon-caption.unit__icon-caption_uppercase-text-black Work with us
         //Колонка для главного содержимого сайта
-        main.main__column-main.main__column-inner-left
+        main.main__column-main.main__column-main_theme-inline.main__column-inner-left
             div.main__double-unit
                 div.unit.unit_theme-info
                     h3.unit__title.unit__title_theme-head General Contracting
@@ -50,28 +50,28 @@ div.main.main_theme-white-gr
                         span.unit__number.unit__number_middle 3
 
             div.main__double-unit
-                div.unit.unit_theme-foto
-                    div.unit__number.unit__number_theme-yellow
-                        span.unit__number.unit__number_middle 4
                 div.unit.unit_theme-info
                     h3.unit__title.unit__title_theme-head Construction
                     hr.unit__horizontal.unit__horizontal_black-solid
                     p.unit__article.unit__article_theme-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
+                div.unit.unit_theme-foto
+                    div.unit__number.unit__number_theme-yellow
+                        span.unit__number.unit__number_middle 4
 
             div.main__double-unit
+                div.unit.unit_theme-foto
+                    div.unit__number.unit__number_theme-yellow
+                        span.unit__number.unit__number_middle 5
                 div.unit.unit_theme-info
                     h3.unit__title.unit__title_theme-head Expert Witness
                     hr.unit__horizontal.unit__horizontal_black-solid
                     p.unit__article.unit__article_theme-text Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.
-                div.unit.unit_theme-foto
-                    div.unit__number.unit__number_theme-yellow
-                        span.unit__number.unit__number_middle 5
 
             div.main__double-unit
-                div.unit.unit_theme-foto
-                    div.unit__number.unit__number_theme-yellow
-                        span.unit__number.unit__number_middle 6
                 div.unit.unit_theme-info
                     h3.unit__title.unit__title_theme-head Procurement
                     hr.unit__horizontal.unit__horizontal_black-solid
                     p.unit__article.unit__article_theme-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
+                div.unit.unit_theme-foto
+                    div.unit__number.unit__number_theme-yellow
+                        span.unit__number.unit__number_middle 6
