--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -159,7 +159,7 @@ body
     font-weight 400
     text-transform uppercase
 
-/*Тело сайта*/
+/*====================Блок Тело сайта=========================*/
 .main
   min-height 500px
   &_theme-white-gr
@@ -182,6 +182,9 @@ body
   &__column-main
     width 879px
     min-height 400px
+    //для размещения инлайн-блоков без пропусков
+    &_theme-inline
+      font-size 0
   //колонка контента для остального
   &__column-aside
     width 293px
